==============================


Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Hibernate Plugin:
  - Results of HQL Queries can be displayed as objects
  - Hibernate logs can be seen in SQuirreL logs when Hibernate logging is configured for console output.


Bug-Fixes:

2978540: Identifiers starting with '_' where not handled as identifiers by the RSyntax lexer. This resulted in syntax coloring and completion problems. 
2974533: Informix: Method can be called only once. / ErrorCode: -79
2965617: Fail to open session with RSyntax editor
2963371: Splash on 3.1 - copyright (was not updated for 2010)



3.1 (3/3/2010)
================

Enhancements:

Updated Translations:
 - Korean (Thanks to Youngwoo Kim)
 - Chinese (Thanks to xpdz)
 - French (Thanks to Erwan DUROSELLE)
 
Improved display of SQL result metadata

Hibernate Plugin:
  The Classpath configuration now allows to move entries up or down. 

New plugin for Netezza NPS database server.  This plugin allows for viewing source and details of Views, 
Stored Procedures, and synonyms.  It also provides the ability to execute stored procedures in the SQL Editor.
See Help for screenshots and more details.

Aliases now have the ability to setup a keep-alive SQL statement and sleep time (in seconds) to prevent a 
connection from being disconnected while appearing to be idle.  This is done using the new Connection tab 
on the Alias properties dialog.

Derby Plugin:
 New tab to display the source code of Derby stored procedures 
 Thanks to Glenn (bassnfool2) for the patch (Patch ID 2907220)

XML Export:
 Tables in SQuirreL's GUI now allow to export data as XML (besides CSV and MS-Excel export)
 Thanks to mironsadziak for the patch (Patch ID 2905595) 

New editor component: RSyntaxTextArea by fifesoft.com.
 New features:
  - No long line problems
  - Enhanced search functions:
      shift F3: Find selected.